fixing spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@
 }
 
 .about{
-  padding: 20% 5% 0 5%;
+  padding: 20% 5% 10% 5%;
 }
 .about .name {
   text-align: center;
